--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"execa": "^0.10.0",
 		"is-png": "^1.0.0",
 		"is-stream": "^1.1.0",
-		"pngquant-bin": "^5.0.0"
+		"pngquant-bin": "^5.0.0",
+		"hazardous": "^0.3.0"
 	},
 	"devDependencies": {
 		"ava": "*",
